version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Common/Graphics/ModelViewManager.rst.txt
.. vale off



:class:`ModelViewManager`
=========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Common.Graphics.ModelViewManager(wrapper: Ansys.ACT.Common.Graphics.MechanicalGraphicsWrapper, graphics: Ansys.Common.Interop.Gfx.IDSGraphics)

   Bases: :py:obj:`object`



.. py:currentmodule:: ModelViewManager

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ApplyModelView`
            - Apply the view specified by index.
          * - :py:attr:`~Capture3DImage`
            - Exports the active object to a 3d AVZ file.
          * - :py:attr:`~CaptureModelView`
            - Save the view specified by index as an image to the project userfiles.
          * - :py:attr:`~CaptureObjectImage`
            - Save the object specified as an image. The image have the same name as the object.
          * - :py:attr:`~CreateView`
            - Create a view from current graphics with default naming.
          * - :py:attr:`~DeleteView`
            - Delete the specified view by name.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~ExportModelViews`
            - Export model views to the specified file.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~GetViewPortSize`
            - Returns the width and height of the specified viewport.
          * - :py:attr:`~GetViewPorts`
            - Get the viewport display style.
          * - :py:attr:`~ImportModelViews`
            - Import model views from the specified file.
          * - :py:attr:`~RenameView`
            - Rename the model view specified by viewIndex to newLabel.
          * - :py:attr:`~RotateView`
            - Rotate the current ModelView.
          * - :py:attr:`~SetActiveViewPort`
            - Set the active of viewport.
          * - :py:attr:`~SetBackView`
            - Change to Back view.
          * - :py:attr:`~SetBottomView`
            - Change to Bottom view.
          * - :py:attr:`~SetFitView`
            - Change to Fit view.
          * - :py:attr:`~SetFrontView`
            - Change to Front view.
          * - :py:attr:`~SetISOView`
            - Change to ISO view.
          * - :py:attr:`~SetLeftView`
            - Change to Left view.
          * - :py:attr:`~SetRightView`
            - Change to Right view.
          * - :py:attr:`~SetTopView`
            - Change to Top view.
          * - :py:attr:`~SetViewPorts`
            - Set the number of viewports displayed.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ActiveViewPort`
            - ActiveViewPort property.
          * - :py:attr:`~NumberOfViews`
            - The number of views currently defined.







Property detail
---------------
.. py:property:: ActiveViewPort
   :type: Optional[Ansys.ACT.Common.Graphics.MechanicalViewPort]


   
   ActiveViewPort property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfViews
   :type: Optional[int]


   
   The number of views currently defined.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ApplyModelView(viewIndex: int) -> None

   
   Apply the view specified by index.

   ..
       !! processed by numpydoc !!

.. py:method:: Capture3DImage(avzfilepath: str) -> None

   
   Exports the active object to a 3d AVZ file.

   ..
       !! processed by numpydoc !!

.. py:method:: CaptureModelView(index: int, mode: str) -> None

   
   Save the view specified by index as an image to the project userfiles.

   ..
       !! processed by numpydoc !!

.. py:method:: CaptureObjectImage(obj: Ansys.ACT.Automation.Mechanical.DataModelObject, mode: str, folder: str) -> None

   
   Save the object specified as an image. The image have the same name as the object.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateView() -> None

   
   Create a view from current graphics with default naming.

   ..
       !! processed by numpydoc !!

.. py:method:: DeleteView(viewLabel: str) -> None

   
   Delete the specified view by name.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportModelViews(viewfilepath: str) -> None

   
   Export model views to the specified file.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetViewPortSize(viewportIndex: int) -> tuple[int, int]

   
   Returns the width and height of the specified viewport.

   ..
       !! processed by numpydoc !!

.. py:method:: GetViewPorts() -> Ansys.Mechanical.DataModel.Enums.ViewportLayoutStyle

   
   Get the viewport display style.

   ..
       !! processed by numpydoc !!

.. py:method:: ImportModelViews(viewfilepath: str) -> None

   
   Import model views from the specified file.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameView(viewIndex: int, newLabel: str) -> None

   
   Rename the model view specified by viewIndex to newLabel.

   ..
       !! processed by numpydoc !!

.. py:method:: RotateView(angle: float) -> None

   
   Rotate the current ModelView.

   ..
       !! processed by numpydoc !!

.. py:method:: SetActiveViewPort(winRowIndex: int, winColIndex: int) -> None

   
   Set the active of viewport.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBackView() -> None

   
   Change to Back view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBottomView() -> None

   
   Change to Bottom view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetFitView() -> None

   
   Change to Fit view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetFrontView() -> None

   
   Change to Front view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetISOView() -> None

   
   Change to ISO view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetLeftView() -> None

   
   Change to Left view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetRightView() -> None

   
   Change to Right view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetTopView() -> None

   
   Change to Top view.

   ..
       !! processed by numpydoc !!

.. py:method:: SetViewPorts(numViewPorts: int, horizontal: bool) -> None

   
   Set the number of viewports displayed.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on